--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
+    "flare-react": "1.0.7",
     "next": "9.2.0",
     "next-images": "^1.3.0",
     "node-sass": "^4.13.1",
@@ -17,9 +18,9 @@
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
-    "@types/node-sass": "^4.11.0",
     "@types/node": "^13.1.8",
-    "@types/react": "^16.9.17",
+    "@types/node-sass": "^4.11.0",
+    "@types/react": "^16.9.18",
     "@types/styled-components": "^4.4.2",
     "typescript": "^3.7.5"
   }
