--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
     "flare-react": "1.0.7",
-    "next": "9.2.0",
+    "next": "9.2.1",
     "next-images": "^1.3.0",
     "node-sass": "^4.13.1",
     "react": "16.12.0",
@@ -18,10 +18,12 @@
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
-    "@types/node": "^13.1.8",
+    "@types/node": "^13.5.0",
     "@types/node-sass": "^4.11.0",
-    "@types/react": "^16.9.18",
+    "@types/react": "^16.9.19",
     "@types/styled-components": "^4.4.2",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "react-is": "^16.12.0",
+    "webpack": "^4.41.5"
   }
 }
